<resources>
    <string name="app_name">LumiMonitor</string>
    <string name="title_activity_menu">Menu</string>
    <string name="login">Login</string>
    <string name="track_temperature">Track temperature &amp; Humidity Levels</string>
    <string name="interact_over_voice_with_baby">Communication Line</string>
    <string name="adjust_lighting">Lighting Options</string>
    <string name="contact_us">Feedback, Review &amp; Contact us</string>
    <string name="signup">Sign Up </string>
    <string name="register">Register</string>
    <string name="registerMessage">TextView</string>
    <string name="temperature">Temperature</string>
    <string name="button">Button</string>
    <string name="add_to_database">Add to database</string>
    <string name="humidity_level">Humidity</string>
    <string name="temperature_level">Temperature</string>
    <string name="textview1">TextView</string>
    <string name="timestamp">TimeStamp</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="goback">Main Menu</string>
    <string name="signout">Sign Out</string>
    <string name="confirm_new_password">Confirm new Password</string>
    <string name="enter_a_new_password">Enter a new Password</string>
    <string name="email">Email</string>
    <string name="title_activity_contact_us">contactUs</string>
    <string name="lumi_app_version_1_0_0">Lumi App Version 1.0.0</string>
    <string name="lumi_is_an_application_under_android_platform_that_helps_users_monitor_their_children_with_it_works_with_the_hardware_device_raspberry_pi_temperature_sensor_luminosity_sensor_microphone_amongst_others">Lumi is an application under Android platform that helps users monitor their children with . It works with the hardware device - Raspberry Pi, Temperature Sensor, Luminosity Sensor, Microphone amongst others.</string>
    <string name="for_more_information_please_contact_us_manshur_ramhith_abdirashid_deval_rajgor">For more information please contact us: Manshur Ramhith, AbdiRashid, Deval Rajgor</string>
    <string name="email_n01249809_humbermail_com">Email: N01249809@humbermail.com</string>
    <string name="textview6">Leave a Feedback for our Customers</string>
    <string name="feedback">Feedback</string>
    <string name="button9">Post</string>
    <string name="button10">Main Menu</string>
    <string name="button11">RGB Settings</string>
    <string name="switch1">Manual Override</string>
    <string name="textview7">Manual Mode</string>
    <string name="textview8">Adjust Brightness</string>
    <string name="todo">TODO</string>
    <string name="rgbStatus">RGB Status</string>
    <string name="fetch">Fetching from Database...</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="register1">Don\'t have an account yet?</string>
    <string name="quit">Quit App</string>
    <string name="mic_out">Mic Level from Phone  </string>
    <string name="mic_in">Mic Level from Device</string>
    <string name="rate">Rate our App:</string>
    <string name="imageDesc">TODO</string>
    <string name="speak">Activate Speaking channel</string>
    <string name="back">back</string>
    <string name="HumidityGraph">Humidity Graph</string>
    <string name="tempgraph">Temperature Graph</string>
    <string name="save">Button</string>
    <string name="Backgroundcolorvalues" />
    <string name="title" />

</resources>
