<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button1"
        android:layout_width="211dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="93dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="195dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="97dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="119dp"
        android:autofillHints="@string/app_name"
        android:ems="10"
        android:hint="email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="93dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="39dp"
        android:autofillHints="@string/app_name"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="260dp"
        android:layout_above="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="127dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="27dp"
        app:srcCompat="@drawable/iconlumi" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="106dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="30dp"
        android:text="Forgot your password?" />

    <Button
        android:id="@+id/button4"
        android:layout_width="201dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="102dp"
        android:text="@string/signup" />


</RelativeLayout>